# jvp

./: .gitignore  .tool-versions  LICENSE  README.md  flutter_rust_bridge.yaml  pubspec.yaml  run_app.sh  run_bundle.sh
docs/spec/: README-SPEC-EVENTS.md  README-SPEC-OVERVIEW.md  README-SPEC-ZERO-COPY.md
lib/: main.dart
lib/application/: app_event_bus.dart  command_handler.dart
lib/application/commands/: end_scrubbing_command.dart  open_file_command.dart  set_effect_command.dart  set_volume_command.dart  start_scrubbing_command.dart  step_frame_command.dart  toggle_ab_looping_command.dart  toggle_looping_command.dart  toggle_mute_command.dart  toggle_play_command.dart  update_ab_loop_range_command.dart  update_scrub_value_command.dart
lib/application/usecase/: add_playlist_entry_usecase.dart  clear_playlist_usecase.dart  end_scrubbing_usecase.dart  get_thumbnail_usecase.dart  open_file_usecase.dart  play_next_track_usecase.dart  remove_playlist_entry_usecase.dart  set_effect_usecase.dart  set_volume_usecase.dart  step_frame_usecase.dart  (+5 more)
lib/presentation/: video_player_view.dart  video_player_view_controller.dart  video_player_view_model.dart
macos/Runner/: AppDelegate.swift  JvpTexture.swift  MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  simple.rs
rust/src/domain/: mod.rs  video.rs
rust/src/infrastructure/: audio.rs  decoder.rs  effects.wgsl  file_browser.rs  mod.rs  renderer.rs  state.rs
rust/src/service/: mod.rs  playback.rs
test/: widget_test.dart
(+34 files in other folders)
